@@ -28,3 +28,6 @@ fr.po
 TRANSLATIONS	Walter Koch	    ??????????
 de.po
 
+TRANSLATIONS	Gregory Steuck	    ??????????
+ru.po
+
