@@ -1,3 +1,7 @@
+Sun Oct 25 19:49:37 1998  Werner Koch  (wk@isil.d.shuttle.de)
+
+	* Makefile.am (g10defs.h): New macro GNUPG_DATADIR.
+
 Wed Oct 21 17:24:24 1998  Werner Koch  (wk@isil.d.shuttle.de)
 
 	* configure.in: Removed gettext kludge
